improvements suggested by codacy.com